Ensured that stats modal's css wasn't bleeding over into the other modals

--- a/front_end/static/css/style.css
+++ b/front_end/static/css/style.css
@@ -293,12 +293,14 @@ ul li {
 .modal__container {
   background-color: #333a40;
   padding: 15px;
-  /* max-width: 500px;  */
-  width: 76vw;
+  width: 500px; 
   max-height: 100vh;
   border-radius: 4px;
   overflow-y: auto;
   box-sizing: border-box;
+}
+#modal-stats .modal__container {
+  width: 76vw;
 }
 .modal__header {
   display: flex;
